# diglist3r

./: .gitignore  README.md  a.json  a.tsv  a.txt  a2tsv.sh  diglist3r.py  diglist3r.sh  install.sh  ns.json  ns.tsv  ns2tsv.sh  pyproject.toml  pytest.ini  tox.ini  tox.sh  x.json  x2tsv.sh
config/: a.json  ns.json  x.json
tests/: test_diglist3r.py
