[tool.poetry]
name = "diglist3r"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
pytest-mock = "^2.0.0"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
tox = "^3.14.3"
coverage = "^5.0.3"
pytest-cov = "^2.8.1"
pynvim = "^0.4.1"
jedi = "^0.16.0"
mypy = "^0.761"
pyls-black = "^0.4.4"
radon = "^4.1.0"
flake8-import-order = "^0.18.1"
frosted = "^1.4.1"
bandit = "^1.6.2"
xenon = "^0.7.0"
flake8-black = "^0.1.1"
flake8-annotations = "^1.1.3"
flake8-bandit = "^2.1.2"
pytest-harvest = "^1.7.4"
pytest-spec = "^2.0.0"
pytest-instafail = "^0.4.1"
pytest-parallel = "^0.0.10"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | venv
    | _build
    | buck-out
    | build
    | dist
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
